# safar-sync

./: .gitignore  AGENTS.md  CONTEXT-MAP.md  CONTEXT.md  DESIGN.md  PRODUCT.md  README.md  justfile
apps/api/: .env.example  README.md  manage.py  pyproject.toml
apps/api/creative_setup/: README.md  apps.py  models.py  permissions.py  selectors.py  serializers.py  tests.py  urls.py  views.py
apps/api/health/: tests.py  urls.py  views.py
apps/api/internal_admin/: apps.py  permissions.py  shell.py  tests.py  urls.py  views.py
apps/api/organizer_media/: admin.py  apps.py  media.py  models.py  selectors.py  serializers.py  tests.py  urls.py  views.py
apps/api/organizer_payments/: apps.py  manual_payment_instructions.py  models.py  online_payment_readiness.py  payment_setup_guidance.py  payment_setup_readiness.py  provider_account_readiness.py  provider_adapters.py  provider_authorization.py  provider_connection_tests.py  provider_credentials.py  serializers.py  setup_records.py  urls.py  views.py
apps/api/organizer_policies/: apps.py  models.py  permissions.py  readiness.py  serializers.py  tests.py  urls.py  views.py
apps/api/organizer_profile/: README.md  apps.py  identity.py  models.py  permissions.py  publication.py  serializers.py  tests.py  urls.py  views.py
apps/api/organizers/: README.md  admin.py  apps.py  booking_intake.py  booking_operations_workflow.py  financial_ledger.py  models.py  online_payment_readiness.py  operations_dashboard.py  organizer_identity.py  organizer_invitations.py  payment_setup_guidance.py  permissions.py  platform_fees.py  (+17 more)
(+384 files in other folders)
